fixed issue where body was being rendered behind the nav bar, so just fixed this with padding for now

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.body {
+  padding-top: 0px;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media (min-width: 600px) {
+  .body {
+    padding-top: 80px;
+  }
 }
